# PointGreyCamera

./: CMakeLists.txt  NOTES.md  __datadir__  acquire_data.py  blink_detection.py  camera_client.py  run.sh  test.sh
eye-blink-detector/: blinky.py  blinky_tiff.py  extract.py  helper.py
include/: PtrGreyCamera.hh  camera.hh
scripts/: blink_socket.py  socket.py
serial/: Makefile
src/: Arduino.cc  Arduino.hh  PtrGreyCamera.cc  main.cpp
src/Acquisition/: Acquisition.cpp
tests/: test_socket.cc
